# MHEGRU

./: .gitignore  CMakeLists.txt  README.md
addingProblem/: checkpoint.pt
addingProblem/input_0/: hidden_0.csv  hidden_1.csv  hidden_10.csv  hidden_100.csv  hidden_101.csv  hidden_102.csv  hidden_103.csv  hidden_104.csv  hidden_105.csv  hidden_106.csv  hidden_107.csv  hidden_108.csv  hidden_109.csv  hidden_11.csv  hidden_110.csv  hidden_111.csv  hidden_112.csv  hidden_113.csv  hidden_114.csv  hidden_115.csv  hidden_116.csv  hidden_117.csv  hidden_118.csv  hidden_119.csv  hidden_12.csv  hidden_120.csv  hidden_121.csv  hidden_122.csv  hidden_123.csv  hidden_124.csv  hidden_125.csv  hidden_126.csv  hidden_127.csv  hidden_128.csv  hidden_129.csv  hidden_13.csv  hidden_130.csv  hidden_131.csv  hidden_132.csv  hidden_133.csv  (+163 more)
addingProblem/weights/: fc_W.csv  fc_b.csv  gru_Uh.csv  gru_Ur.csv  gru_Uz.csv  gru_Wh.csv  gru_Wr.csv  gru_Wz.csv  gru_bh.csv  gru_br.csv  gru_bz.csv
addingProblem_6/input_0/: hidden_0.csv  hidden_1.csv  hidden_2.csv  hidden_3.csv  hidden_4.csv  hidden_5.csv  input.csv  output.csv  target.csv
addingProblem_6/weights/: fc_W.csv  fc_b.csv  gru_Uh.csv  gru_Ur.csv  gru_Uz.csv  gru_Wbh.csv  gru_Wbr.csv  gru_Wbz.csv  gru_Wh.csv  (+5 more)
archive/: AddingProblem.cpp  AddingProblem.h  MHEAddingProblem.cpp  MHEAddingProblem.h
include/: MHEGRU.h  RNN.h
mains/: AddingProblem.h
python/: GRUCustom.py  MNIST.py  adding.py  customFunctions.py  word_level_lm.py
src/: AddingProblem.cpp  HERNN.h  MHEAddingProblem.cpp  MHEAddingProblem.h  MHEGRU.cpp  RNN.cpp  main.cpp
(+105 files in other folders)
